GNOME Bugzilla – Bug 620474
Status reported by account dialog is wrong in connman mode
Last modified: 2010-06-03 13:55:38 UTC
When empathy is built with connman the account status shown in the accounts dialog is sometimes incorrect. Whenever the account is in state DISCONNECTED the error is always was reported as a connection problem. This was because the EmpathyConnectivity object was too short lived to get a response to the asynchronous call that it makes to find out if it was online or not (the NM mode makes a synchronous call.) The incoming patch simply associates with the connectivity object to the dialog so that there is time for the initial request to be made and responded to.
Created attachment 162647 [details] [review] Patch to fix problem
Review of attachment 162647 [details] [review]: Looks good. Please merge to 2.30 and master.
All merged thanks!